@@ -1,3 +1,10 @@
+2017-08-28  Alexander Monakov  <amonakov@ispras.ru>
+
+	PR target/80640
+	* doc/md.texi (mem_thread_fence): Remove mention of mode.  Rewrite.
+	* optabs.c (expand_mem_thread_fence): Emit a compiler barrier when
+	using targetm.gen_mem_thread_fence.
+
 2017-08-27  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/81995
